========================================
Change log for mod_hotpot
========================================

2021-09-14 (46)
 - modify markdown syntax for long help messages (for compatability with Moodle 3.11)

2020-06-05 (44)
 - mod/hotpot convert URLs in 'src' attribute of <audio> and <video> tags

2020-03-01 (43)
 - include current version in tool to redo upgrade

2019-10-12 (41)
 - msd_hotpot standardize layout and spelling in CHANGES.txt

2019-07-28 (40)
 - add db/subplugins.json for compatability with Moodle >= 3.8

2019-07-17 (39)
 - separate '<?' to '< ?' so that it is not mistaken for a PHP short tag

2019-05-30 (38)
 - remove 'continue' statement inside SWITCH block

2019-04-05 (37)
 - add comments about events_trigger availability

2019-03-30 (36)
 - ensure 'modname' is defined when creating new activities in Moodle >= 3.5

2019-02-13 (35)
 - fix URL of secondary zip download site

2019-02-13 (35)
 - fix force_update tool for compatability with Moodle >= 2.7

2019-01-21 (34)
 - remove use of 'events_trigger' for compatability with Moodle 3.6

2019-01-21 (33)
 - (1) CONTRIB-7098 fix 'non-numeric value' warning in PHP 7.1; (2) fix 'cannotexecduringupgrade' error when modifying HotPot grades during Moodle upgrade

2018-12-08 (32)
 - remove misplaced 'use' line in main privacy file for HotPot module

2018-12-07 (31)
 - add polyfill to privacy providers to prevent errors in PHP 5.x

2018-12-07 (30)
 - Merge pull request #17 from Anupamatd/hotpot_privacy_api

2018-09-10 (29)
 - Merge pull request #17 from Anupamatd/hotpot_privacy_api Incorporated Privacy API. Many thanks to Anupamatd for all your work on this improvement.

2018-09-10 (29)
 - fix URL for Moodle message feedback in Moodle >= 3.2

2018-06-30 (27)
 - fix location of parentNode in JMix under Boost theme

2018-06-29 (25)
 - fix addition of navigation nodes in Moodle 2.0

2018-06-29 (24)
 - display reports in Admin menu in Moodle >= 2.5 to ensure that they remain accessible in Boost theme
