@@ -356,13 +356,7 @@ class mod_hotpot_attempt_hp_renderer extends mod_hotpot_attempt_renderer {
     function fix_headcontent_rottmeier($type='')  {
     }
 
-    /**
-     * fix_js_comment
-     *
-     * @param xxx $str
-     * @return xxx
-     */
-    function fix_js_comment($str)  {
+    function fix_js_comment($str) {
         $out = '';
 
         // the parse state
@@ -378,11 +372,11 @@ class mod_hotpot_attempt_hp_renderer extends mod_hotpot_attempt_renderer {
         while ($i<$strlen) {
             switch ($state) {
                 case 1: // single-quoted string
-                    $out .= $str{$i};
-                    switch ($str{$i}) {
+                    $out .= $str[$i];
+                    switch ($str[$i]) {
                         case "\\":
                             $i++; // skip next char
-                            $out .= $str{$i};
+                            $out .= $str[$i];
                             break;
                         case "\n":
                         case "\r":
@@ -393,11 +387,11 @@ class mod_hotpot_attempt_hp_renderer extends mod_hotpot_attempt_renderer {
                     break;
 
                 case 2: // double-quoted string
-                    $out .= $str{$i};
-                    switch ($str{$i}) {
+                    $out .= $str[$i];
+                    switch ($str[$i]) {
                         case "\\":
                             $i++; // skip next char
-                            $out .= $str{$i};
+                            $out .= $str[$i];
                             break;
                         case "\n":
                         case "\r":
@@ -408,14 +402,14 @@ class mod_hotpot_attempt_hp_renderer extends mod_hotpot_attempt_renderer {
                     break;
 
                 case 3: // single line comment
-                    if ($str{$i}=="\n" || $str{$i}=="\r") {
+                    if ($str[$i]=="\n" || $str[$i]=="\r") {
                         $state = 0; // end of this comment
-                        $out .= $str{$i};
+                        $out .= $str[$i];
                     }
                     break;
 
                 case 4: // multi-line comment
-                    if ($str{$i}=='*' && $str{$i+1}=='/') {
+                    if ($str[$i]=='*' && $str[$i+1]=='/') {
                         $state = 0; // end of this comment
                         $i++;
                     }
@@ -423,19 +417,19 @@ class mod_hotpot_attempt_hp_renderer extends mod_hotpot_attempt_renderer {
 
                 case 0: // plain old JavaScript code
                 default:
-                    switch ($str{$i}) {
+                    switch ($str[$i]) {
                         case "'":
-                            $out .= $str{$i};
+                            $out .= $str[$i];
                             $state = 1; // start of single quoted string
                             break;
 
                         case '"':
-                            $out .= $str{$i};
+                            $out .= $str[$i];
                             $state = 2; // start of double quoted string
                             break;
 
                         case '/':
-                            switch ($str{$i+1}) {
+                            switch ($str[$i+1]) {
                                 case '/':
                                     switch (true) {
                                         // allow certain single line comments
@@ -467,12 +461,12 @@ class mod_hotpot_attempt_hp_renderer extends mod_hotpot_attempt_renderer {
                                     break;
                                 default:
                                     // a slash - could be start of RegExp ?!
-                                    $out .= $str{$i};
+                                    $out .= $str[$i];
                             }
                             break;
 
                         default:
-                            $out .= $str{$i};
+                            $out .= $str[$i];
 
                     } // end switch : non-comment char
             } // end switch : status
@@ -582,7 +576,7 @@ class mod_hotpot_attempt_hp_renderer extends mod_hotpot_attempt_renderer {
      * @param boolean $offset (optional, default=0) char position at which to start search
      * @return array($start, $finish) start and finish positions of js block within $str
      */
-    function locate_js_block($type, $name, &$str, $includewhitespace=false, $offset=0)  {
+    function locate_js_block($type, $name, &$str, $includewhitespace=false, $offset=0) {
         $start = 0;
         $finish = 0;
 
@@ -633,7 +627,7 @@ class mod_hotpot_attempt_hp_renderer extends mod_hotpot_attempt_renderer {
             while ($i<$strlen && ! $finish) {
                 switch ($state) {
                     case 1: // single-quoted string
-                        switch ($str{$i}) {
+                        switch ($str[$i]) {
                             case "\\":
                                 $i++; // skip next char
                                 break;
@@ -644,7 +638,7 @@ class mod_hotpot_attempt_hp_renderer extends mod_hotpot_attempt_renderer {
                         break;
 
                     case 2: // double-quoted string
-                        switch ($str{$i}) {
+                        switch ($str[$i]) {
                             case "\\":
                                 $i++; // skip next char
                                 break;
@@ -655,13 +649,13 @@ class mod_hotpot_attempt_hp_renderer extends mod_hotpot_attempt_renderer {
                         break;
 
                     case 3: // single line comment
-                        if ($str{$i}=="\n" || $str{$i}=="\r") {
+                        if ($str[$i]=="\n" || $str[$i]=="\r") {
                             $state = 0; // end of this comment
                         }
                         break;
 
                     case 4: // multi-line comment
-                        if ($str{$i}=='*' && $str{$i+1}=='/') {
+                        if ($str[$i]=='*' && $str[$i+1]=='/') {
                             $state = 0; // end of this comment
                             $i++;
                         }
@@ -669,7 +663,7 @@ class mod_hotpot_attempt_hp_renderer extends mod_hotpot_attempt_renderer {
 
                     case 0: // plain old JavaScript code
                     default:
-                        switch ($str{$i}) {
+                        switch ($str[$i]) {
                             case "'":
                                 $state = 1; // start of single quoted string
                                 break;
@@ -679,7 +673,7 @@ class mod_hotpot_attempt_hp_renderer extends mod_hotpot_attempt_renderer {
                                 break;
 
                             case '/':
-                                switch ($str{$i+1}) {
+                                switch ($str[$i+1]) {
                                     case '/':
                                         $state = 3; // start of single line comment
                                         $i++;
@@ -720,7 +714,7 @@ class mod_hotpot_attempt_hp_renderer extends mod_hotpot_attempt_renderer {
                                 }
 
                                 // detect trailing semicolon, if any
-                                if ($str{$i+1}==';') {
+                                if ($str[$i+1]==';') {
                                     $i++;
                                 }
                                 if ($count==0) { // end of outer code block (e.g. end of function)
